<resources>
    <string name="app_name">ImageSearcher</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_main_title">Image Searcher</string>
    <string name="downloading_items">Downloading Items..</string>
    <string name="network_error">Please check your network connection and try again</string>
    <string name="no_response_error">Error. Try again.</string>
    <string name="network_http_error" formatted="false">Network error %d. Try again.</string>
    <string name="unknown_error">Error. Try again.</string>
    <string name="no_results_found">No results found, please try another search</string>

    <!-- Fragment tags -->
    <string name="main_view_pager_fragment_tag">main_view_pager_fragment</string>
    <string name="main_list_fragment_tag">main_list_fragment</string>

    <!-- Fragment keys -->
    <string name="saved_photos_fragment_last_pos_key">saved_photos_fragment_last_pos</string>
    <string name="saved_photos_fragment_last_offset_key">saved_photos_fragment_offset_pos</string>
    <string name="main_fragment_last_pos_key">main_fragment_last_pos</string>
    <string name="main_fragment_last_offset_key">main_fragment_offset_pos</string>
    <string name="main_fragment_content_loaded_key">main_fragment_content_loaded</string>
    <string name="main_fragment_is_search_tray_open_key">main_fragment_is_search_tray_open</string>

    <!-- search -->
    <string name="search_title">Search for images</string>
    <string name="search_hint">Search for images</string>
    <string name="clear_search_history_text">CLEAR HISTORY</string>

    <!-- activity data -->
    <string name="data_array_key">data_array</string>
    <string name="start_pos_key">start_pos</string>
    <string name="data_parcel_key">data_parcel</string>

    <!-- content descriptions -->
    <string name="content_desc_main_photo">Photo</string>
    <string name="content_desc_views">Number of Views</string>
    <string name="content_desc_comments">Number of Comments</string>
    <string name="content_desc_share">Share Photo</string>
    <string name="content_desc_save">Save Photo</string>

    <!-- Files and Folders -->
    <string name="internal_temp_folder">/temp_image/</string>
    <string name="file_provider">testsample.altvr.com.testsample.fileprovider</string>
    <string name="internal_temp_file_name">temp</string>
    <string name="file_default_etx">.jpg</string>
    <string name="share_title">Check this out!</string>

</resources>
