<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    card_view:cardCornerRadius="@dimen/card_view_corner"
    card_view:cardElevation="@dimen/card_view_elevation"
    android:layout_marginTop="@dimen/card_view_margin_top"
    android:layout_marginBottom="@dimen/card_view_margin_top"
    android:layout_marginStart="@dimen/card_view_margin_start"
    android:layout_marginEnd="@dimen/card_view_margin_end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/user_info_layout_margin">

            <ImageView
                android:id="@+id/user_image_image_view"
                android:layout_width="@dimen/user_image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_desc_views" />

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/user_name_text_view_padding"
                android:text="neo"
                android:textStyle="bold"
                android:textColor="@color/black"
                style="@style/text_normal"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/image_container_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/image_loading_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/item_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_desc_main_photo"
                android:transitionName="PhotoTransition"
                android:src="@drawable/supermanbatman_sig"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/photo_views_layout_margin">

                <ImageView
                    android:contentDescription="@string/content_desc_views"
                    android:src="@drawable/eye"
                    android:tint="@android:color/transparent"
                    style="@style/icons_style"/>

                <TextView
                    android:id="@+id/v_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/photo_views_text_view_padding"
                    android:text="100"
                    android:textColor="@color/white"
                    style="@style/text_shadow"/>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/photo_info_layout_margin">

            <TextView
                android:id="@+id/tags_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:paddingStart="@dimen/photo_info_tags_text_view_padding_left"
                android:paddingEnd="@dimen/photo_info_tags_text_view_padding_right"
                android:text="lo, na, nice, haha"
                style="@style/text_normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/likes_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingStart="@dimen/photo_info_likes_text_view_padding_left"
                    android:paddingEnd="@dimen/photo_info_likes_text_view_padding_right"
                    android:text="124 Likes"
                    android:textSize="@dimen/photo_info_likes_text_size"
                    android:textStyle="bold"
                    style="@style/text_normal"/>

                <TextView
                    android:id="@+id/comments_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/photo_info_comments_text_view_padding"
                    android:text="2"
                    style="@style/text_normal"/>

                <ImageView
                    android:layout_marginEnd="@dimen/photo_info_comments_image_margin_end"
                    android:contentDescription="@string/content_desc_comments"
                    android:src="@drawable/comments"
                    style="@style/icons_style"/>

                <ImageView
                    android:id="@+id/share_photo_image_view"
                    android:layout_marginEnd="@dimen/photo_info_share_image_margin_end"
                    android:contentDescription="@string/content_desc_share"
                    android:src="@drawable/share"
                    style="@style/icons_style"/>

                <ImageView
                    android:id="@+id/save_photo_image_view"
                    android:layout_marginEnd="@dimen/photo_info_save_image_margin_end"
                    android:contentDescription="@string/content_desc_save"
                    android:src="@drawable/heart_outline"
                    style="@style/icons_style" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>






